--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/shoes4.jpg" alt="">
+                    <img class="fancybox" src="img/laces3.jpg" alt="">
                     <div class="caption">
-                        <h4>Booties</h4>
+                        <h4>Grey</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
@@ -165,9 +165,9 @@
         <div class="row text-center">
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces3.JPG" alt="">
+                    <img class="fancybox" src="img/shoes4.JPG" alt="">
                     <div class="caption">
-                        <h4>Grey</h4>
+                        <h4>Booties</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
