--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <img class="fancybox" src="img/shoes1.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Black</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p> -->
@@ -137,7 +137,7 @@
                     <img class="fancybox" src="img/shoes2.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Gold</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                     <img class="fancybox" src="img/shoes3.jpg" alt="">
                     <div class="caption">
                         <h4>Brown/Brown</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                     <img class="fancybox" src="img/laces3.JPG" alt="">
                     <div class="caption">
                         <h4>Grey</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     <img class="fancybox" src="img/shoes4.jpg" alt="">
                     <div class="caption">
                         <h4>Booties</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p> -->
@@ -180,7 +180,7 @@
                     <img class="fancybox" src="img/laces1.JPG" alt="">
                     <div class="caption">
                         <h4>Gold Laces</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                     <img class="fancybox" src="img/laces2.JPG" alt="">
                     <div class="caption">
                         <h4>Black Leather Laces</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                     <img class="fancybox" src="img/laces4.JPG" alt="">
                     <div class="caption">
                         <h4>Leopard Laces</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
                     </div>
                 </div>
             </div>
