--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="container">
                 <h1>Craftniss</h1>
                 <h2>I’m getting all kinds of gifts today.</h2>
+                <h3 class="byIris">by iris</h3>
             </div>
         </div>
     </header>
@@ -233,8 +234,8 @@
                     <i class="fa fa-envelope-o"></i>
                     <abbr title="Email">E</abbr>: <a href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
                     <br>
-                    <i class="fa fa-phone"></i>
-                    <abbr title="Phone">P</abbr>: (956) 802-6395
+<!--                     <i class="fa fa-phone"></i>
+                    <abbr title="Phone">P</abbr>: (956) 802-6395 -->
                 </div>
             </div>
             <!-- /.row -->
