adjusted mobile email

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-md-12 text-center contacts">
                     <i class="fa fa-envelope-o"></i>
-                    <abbr title="Email">E</abbr>: <a href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
+                    <abbr title="Email">E</abbr>: <a class="email" href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
                     <br>
 <!--                     <i class="fa fa-phone"></i>
                     <abbr title="Phone">P</abbr>: (956) 802-6395 -->
