adjusted mobile email

--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav links pull-right">
                     <li>
-                        <a href="#about">About</a>
+                        <a class="topLinks" href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#shoes">Shoes</a>
+                        <a class="topLinks" href="#shoes">Shoes</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a class="topLinks" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
