--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#top">Iris Lopez</a>
+                <a class="navbar-brand" href="#top" style="color:white;">Iris Lopez</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav links pull-right">
                     <li>
-                        <a class="topLinks" href="#about">About</a>
+                        <a href="#about" style="color:white;">About</a>
                     </li>
                     <li>
-                        <a class="topLinks" href="#shoes">Shoes</a>
+                        <a href="#shoes" style="color:white;">Shoes</a>
                     </li>
                     <li>
-                        <a class="topLinks" href="#contact">Contact</a>
+                        <a href="#contact" style="color:white;">Contact</a>
                     </li>
                 </ul>
             </div>
