--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.css" />
     <style type="text/css">
     a.fancybox img {
@@ -78,6 +78,9 @@
                         <a href="#shoes" style="color:white;">Shoes</a>
                     </li>
                     <li>
+                        <a href="#laces" style="color:white;">Laces</a>
+                    </li>
+                    <li>
                         <a href="#contact" style="color:white;">Contact</a>
                     </li>
                 </ul>
@@ -126,7 +129,7 @@
                     <img class="fancybox" src="img/shoes1.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Black</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <p>Black faux crocodile vinyl all around.</p>
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p> -->
@@ -138,7 +141,7 @@
                     <img class="fancybox" src="img/shoes2.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Gold</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <p>Black faux crocodile vinyl with gold polyester for bow.</p>
                     </div>
                 </div>
             </div>
@@ -147,7 +150,7 @@
                     <img class="fancybox" src="img/shoes3.jpg" alt="">
                     <div class="caption">
                         <h4>Brown/Brown</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <p>Distressed vinyl all around.</p>
                     </div>
                 </div>
             </div>
@@ -156,7 +159,7 @@
                     <img class="fancybox" src="img/laces3.JPG" alt="">
                     <div class="caption">
                         <h4>Grey</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <p>Grey faux crocodile vinyl all around.</p>
                     </div>
                 </div>
             </div>
@@ -164,143 +167,184 @@
         <!-- /.row -->
         <!-- Second Row Products -->
         <div class="row text-center">
-            <div class="col-md-3 col-sm-6 hero-feature">
+<!--             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/shoes4.jpg" alt="">
+                    <img class="fancybox" src="img/booties1.jpg" alt="">
                     <div class="caption">
-                        <h4>Booties</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
-                        <!--                         <p>
+                        <h4>Grey Booties</h4>
+                        <p></p>
+                        <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
-                        </p> -->
+                        </p>
+                    </div>
+                </div>
+            </div> -->
+            <div class="col-md-3 col-sm-6 hero-feature">
+                <div class="thumbnail">
+                    <img class="fancybox" src="img/booties2.jpg" alt="">
+                    <div class="caption">
+                        <h4>Grey Booties</h4>
+                        <p>Grey faux crocodile vinyl with black faux crocodile bow.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces1.JPG" alt="">
+                    <img class="fancybox" src="img/booties3.jpg" alt="">
                     <div class="caption">
-                        <h4>Gold Laces</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <h4>Black Booties</h4>
+                        <p>Black faux crocodile vinyl all around lined inside with faux fur</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 hero-feature">
                 <div class="thumbnail">
-                    <img class="fancybox" src="img/laces2.JPG" alt="">
+                    <img class="fancybox" src="img/booties4.jpg" alt="">
                     <div class="caption">
-                        <h4>Black Leather Laces</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6 hero-feature">
-                <div class="thumbnail">
-                    <img class="fancybox" src="img/laces4.JPG" alt="">
-                    <div class="caption">
-                        <h4>Leopard Laces</h4>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        <h4>Brown Booties</h4>
+                        <p>Brown distressed vinyl with light brown distressed vinyl for bow.</p>
                     </div>
                 </div>
             </div>
         </div>
         <!-- /.row -->
-        <a name="contact"></a>
+        <a name="laces"></a>
         <!-- Page Content -->
         <div class="container spacing">
             <!-- Title -->
             <div class="row">
                 <div class="col-lg-12 text-center title">
-                    <h3>Contacts</h3>
-                    <ul class="list-inline">
-                        <li>
-                            <a href="https://www.facebook.com/craftniss/">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-facebook fa-stack-1x fa-2x"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <li>
-                                <a href="https://www.instagram.com/craftniss/">
-                                    <span class="fa-stack fa-lg">
-                                    <i class="fa fa-instagram fa-stack-1x fa-2x"></i>
-                                </span>
-                                </a>
-                            </li>
-                    </ul>
-                </div>
-                <div class="col-md-12 text-center contacts">
-                    <i class="fa fa-envelope-o"></i>
-                    <abbr title="Email">E</abbr>: <a class="email" href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
-                    <br>
-<!--                     <i class="fa fa-phone"></i>
-                    <abbr title="Phone">P</abbr>: (956) 802-6395 -->
+                    <h3>Laces</h3>
                 </div>
             </div>
             <!-- /.row -->
-        </div>
-        <!-- /.row -->
-        <!-- Footer -->
-        <footer>
-            <div class="container text-center">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                        <a class="backToTop" href="#top">back to top</a>
-                        <p class="copyright text-muted">Copyright Iris Lopez 2016</p>
+            <!-- First Row of Laces -->
+            <div class="row text-center">
+                <div class="col-md-3 col-sm-6 hero-feature">
+                    <div class="thumbnail">
+                        <img class="fancybox" src="img/laces1.JPG" alt="">
+                        <div class="caption">
+                            <h4>Gold Laces</h4>
+                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 hero-feature">
+                    <div class="thumbnail">
+                        <img class="fancybox" src="img/laces2.JPG" alt="">
+                        <div class="caption">
+                            <h4>Black Leather Laces</h4>
+                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 hero-feature">
+                    <div class="thumbnail">
+                        <img class="fancybox" src="img/laces4.JPG" alt="">
+                        <div class="caption">
+                            <h4>Leopard Laces</h4>
+                            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> -->
+                        </div>
                     </div>
                 </div>
             </div>
-        </footer>
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
-        <script>
-        $(function() {
-            $('a[href*="#"]:not([href="#"])').click(function() {
-                if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
-                    var target = $(this.hash);
-                    target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                    if (target.length) {
-                        $('html, body').animate({
-                            scrollTop: target.offset().top
-                        }, 1000);
-                        return false;
+            <!-- /.row -->
+            <a name="contact"></a>
+            <!-- Page Content -->
+            <div class="container spacing">
+                <!-- Title -->
+                <div class="row">
+                    <div class="col-lg-12 text-center title">
+                        <h3>Contacts</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="https://www.facebook.com/craftniss/">
+                                    <span class="fa-stack fa-lg">
+                                    <i class="fa fa-facebook fa-stack-1x fa-2x"></i>
+                                </span>
+                                </a>
+                            </li>
+                            <li>
+                                <li>
+                                    <a href="https://www.instagram.com/craftniss/">
+                                        <span class="fa-stack fa-lg">
+                                    <i class="fa fa-instagram fa-stack-1x fa-2x"></i>
+                                </span>
+                                    </a>
+                                </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-12 text-center contacts">
+                        <i class="fa fa-envelope-o"></i>
+                        <abbr title="Email">E</abbr>: <a class="email" href="mailto:ilopez933@gmail.com">ilopez933@gmail.com</a>
+                        <br>
+                        <!--                     <i class="fa fa-phone"></i>
+                    <abbr title="Phone">P</abbr>: (956) 802-6395 -->
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.row -->
+            <!-- Footer -->
+            <footer>
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                            <a class="backToTop" href="#top">back to top</a>
+                            <p class="copyright text-muted">Copyright Iris Lopez 2016</p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <!-- jQuery -->
+            <script src="js/jquery.js"></script>
+            <!-- Bootstrap Core JavaScript -->
+            <script src="js/bootstrap.min.js"></script>
+            <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+            <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/1.3.4/jquery.fancybox-1.3.4.pack.min.js"></script>
+            <script>
+            $(function() {
+                $('a[href*="#"]:not([href="#"])').click(function() {
+                    if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+                        var target = $(this.hash);
+                        target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                        if (target.length) {
+                            $('html, body').animate({
+                                scrollTop: target.offset().top
+                            }, 1000);
+                            return false;
+                        }
                     }
-                }
+                });
             });
-        });
-        $(function() {
-            $('.nav a').on('click', function() {
-                if ($('.navbar-toggle').css('display') != 'none') {
-                    $(".navbar-toggle").trigger("click");
-                }
+            $(function() {
+                $('.nav a').on('click', function() {
+                    if ($('.navbar-toggle').css('display') != 'none') {
+                        $(".navbar-toggle").trigger("click");
+                    }
+                });
             });
-        });
-        $(function($) {
-            var addToAll = false;
-            var gallery = true;
-            var titlePosition = 'inside';
-            $(addToAll ? 'img' : 'img.fancybox').each(function() {
-                var $this = $(this);
-                var title = $this.attr('title');
-                var src = $this.attr('data-big') || $this.attr('src');
-                var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
-                $this.wrap(a);
+            $(function($) {
+                var addToAll = false;
+                var gallery = true;
+                var titlePosition = 'inside';
+                $(addToAll ? 'img' : 'img.fancybox').each(function() {
+                    var $this = $(this);
+                    var title = $this.attr('title');
+                    var src = $this.attr('data-big') || $this.attr('src');
+                    var a = $('<a href="#" class="fancybox"></a>').attr('href', src).attr('title', title);
+                    $this.wrap(a);
+                });
+                if (gallery)
+                    $('a.fancybox').attr('rel', 'fancyboxgallery');
+                $('a.fancybox').fancybox({
+                    titlePosition: titlePosition
+                });
             });
-            if (gallery)
-                $('a.fancybox').attr('rel', 'fancyboxgallery');
-            $('a.fancybox').fancybox({
-                titlePosition: titlePosition
-            });
-        });
-        $.noConflict();
-        </script>
-        <!-- /.container -->
+            $.noConflict();
+            </script>
+            <!-- /.container -->
 </body>
 
 </html>
