updated font size desc.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <img class="fancybox" src="img/shoes1.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Black</h4>
-                        <p>Black faux crocodile vinyl all around.</p>
+                        <p class="description">Black faux crocodile vinyl all around.</p>
                         <!--                         <p>
                             <a href="#" class="btn btn-primary">Buy Now!</a> <a href="#" class="btn btn-default">More Info</a>
                         </p> -->
@@ -141,7 +141,7 @@
                     <img class="fancybox" src="img/shoes2.jpg" alt="">
                     <div class="caption">
                         <h4>Black/Gold</h4>
-                        <p>Black faux crocodile vinyl with gold polyester for bow.</p>
+                        <p class="description">Black faux crocodile vinyl with gold bow.</p>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                     <img class="fancybox" src="img/shoes3.jpg" alt="">
                     <div class="caption">
                         <h4>Brown/Brown</h4>
-                        <p>Distressed vinyl all around.</p>
+                        <p class="description">Brown distressed vinyl with matching bow. </p>
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     <img class="fancybox" src="img/laces3.JPG" alt="">
                     <div class="caption">
                         <h4>Grey</h4>
-                        <p>Grey faux crocodile vinyl all around.</p>
+                        <p class="description">Grey faux crocodile vinyl all around.</p>
                     </div>
                 </div>
             </div>
@@ -184,7 +184,7 @@
                     <img class="fancybox" src="img/booties2.jpg" alt="">
                     <div class="caption">
                         <h4>Grey Booties</h4>
-                        <p>Grey faux crocodile vinyl with black faux crocodile bow.</p>
+                        <p class="description">Grey faux crocodile vinyl with faux crocodile bow.</p>
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                     <img class="fancybox" src="img/booties3.jpg" alt="">
                     <div class="caption">
                         <h4>Black Booties</h4>
-                        <p>Black faux crocodile vinyl all around lined inside with faux fur</p>
+                        <p class="description">Black faux crocodile vinyl & lined inside with faux fur.</p>
                     </div>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                     <img class="fancybox" src="img/booties4.jpg" alt="">
                     <div class="caption">
                         <h4>Brown Booties</h4>
-                        <p>Brown distressed vinyl with light brown distressed vinyl for bow.</p>
+                        <p class="description">Brown distressed vinyl with matching bow.</p>
                     </div>
                 </div>
             </div>
